--- a/index.html
+++ b/index.html
@@ -261,5 +261,6 @@
             });
         });
     </script>
+    <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2682010394958299" crossorigin="anonymous" data-checked-head="true"></script>
 </body>
 </html>
