--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>2025 技术栈清单</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2682010394958299"      crossorigin="anonymous"></script>
 </head>
 <body class="bg-gray-50">
     <!-- 头部 -->
@@ -260,7 +261,6 @@
                 }
             });
         });
-    </script>
-    <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2682010394958299" crossorigin="anonymous" data-checked-head="true"></script>
+    </script>    
 </body>
 </html>
