--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2682010394958299"      crossorigin="anonymous"></script>
+    <link rel="canonical" href="https://indie-stack.sprunki-games.online">
 </head>
 <body class="bg-gray-50">
     <!-- 头部 -->
